- Refactored common dropdown functionality into the InnerLabelDropdown component - Fixed a z-index issue on dropdown menu

--- a/src/bridge/style/extend.css
+++ b/src/bridge/style/extend.css
@@ -481,3 +481,7 @@ code {
 .full-width {
   width: 100%;
 }
+
+.z-1 {
+  z-index: 1
+}
